--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,9 @@
     "angular-toastr": "~1.5.0",
     "moment": "~2.10.6",
     "animate.css": "~3.4.0",
-    "angular": "~1.4.2"
+    "angular": "~1.4.2",
+    "angular-off-click": "~0.0.9",
+    "angular-perfect-scrollbar": "~0.0.4"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.2"
